--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AAAC - Avondale Adventist Athletics Club | Running Together, Growing Together</title>
-    <meta name="description" content="Join Avondale Adventist Athletics Club (AAAC) - a community committed to promoting healthy lifestyles and personal growth through running. Open to all fitness levels." />
-    <meta name="author" content="AAAC" />
 
-    <meta property="og:title" content="AAAC - Avondale Adventist Athletics Club" />
-    <meta property="og:description" content="Running Together. Growing Together. Join our inclusive running community in Harare." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AAAC - Avondale Adventist Athletics Club | Running Together, Growing Together</title>
+  <meta name="description"
+    content="Join Avondale Adventist Athletics Club (AAAC) - a community committed to promoting healthy lifestyles and personal growth through running. Open to all fitness levels." />
+  <meta name="author" content="AAAC" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@AAAC" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="AAAC - Avondale Adventist Athletics Club" />
+  <meta property="og:description"
+    content="Running Together. Growing Together. Join our inclusive running community in Harare." />
+  <meta property="og:type" content="website" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@AAAC" />
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
